[package]
name = "stellar-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
publish = false

[lib]
name = "rust_stellar_core"
crate-type = ["staticlib"]

[dependencies]
log = "=0.4.19"
tracy-client = { version = "=0.15.2", features = ["enable"], default-features = false, optional = true}
cxx = "=1.0.97"
base64 = "=0.13.1"
rustc-simple-version = "=0.1.0"
# NB: this must match the same rand version used by soroban (but the tooling
# will complain if it does not match)
rand = "=0.8.5"

petgraph = "=0.6.4"
toml = "=0.7.8"

# This copy of the soroban host is always enabled, and should always point to a
# version that supports stellar-core's Config::CURRENT_LEDGER_PROTOCOL_VERSION.
# When upgrading from protocol N to N+1, this copy will therefore have its
# version advance first (to enable support for N+1) even before the network has
# voted to upgrade to it. In order to avoid divergence during such an upgrade,
# we will simultaneously enable the `prev` copy of soroban (below), continuing
# to point to the previous already-released soroban that only supported protocol
# N.

[dependencies.soroban-env-host-curr]
version = "=20.0.0-rc2"
git = "https://github.com/stellar/rs-soroban-env"
package = "soroban-env-host"
rev = "3820e24add81de526d915d99593591e0ef18c06a"

# This copy of the soroban host is _optional_ and only enabled during protocol
# transitions. When transitioning from protocol N to N+1, the `curr` copy
# (above) will bump its version to one that supports protocol N+1, and we will
# simultaneously enable this `prev` copy by building with
# `--feature=soroban-env-host-prev` and pointing its version and git rev to the
# last soroban released to the network that speaks protocol N. When we deploy
# this to a network running protocol N it will run on `prev` until the upgrade,
# then switch from `prev` to `curr` at the upgrade, and then in the next release
# we can turn `prev` off again.
#
# A note on `rev` hashes: When `prev` is disabled, the rust-analyzer IDE will
# still want it to point to some version of soroban just for auto-completion
# (because it builds with `--all-features`). To make this work, the `rev` spec
# below has to be different from the `rev` spec in the `curr` copy of soroban
# above. The easiest way to make this work is to just point to one git rev 
# before the rev specified for `curr`.

[dependencies.soroban-env-host-prev]
optional = true
version = "=20.0.0-rc2"
git = "https://github.com/stellar/rs-soroban-env"
package = "soroban-env-host"
rev = "be04cf31e925ba5bacd9b22db7caf7b4f6dd8372"

[dependencies.soroban-test-wasms]
version = "=20.0.0-rc2"
git = "https://github.com/stellar/rs-soroban-env"
rev = "3820e24add81de526d915d99593591e0ef18c06a"

[dependencies.soroban-synth-wasm]
version = "=20.0.0-rc2"
git = "https://github.com/stellar/rs-soroban-env"
rev = "3820e24add81de526d915d99593591e0ef18c06a"

[dependencies.cargo-lock]
version = "=9.0.0"
git = "https://github.com/rustsec/rustsec"
rev = "a5c69fc6e4b6068b43d7143f3a2f68c3f3de37d8"
features = ["dependency-tree"]

# This feature definition is implied by the optional=true line in the dep, but
# writing it out in full here cross-checks that nobody _removed_ that line.
[features]
soroban-env-host-prev = ["dep:soroban-env-host-prev"]
tracy = ["dep:tracy-client", "soroban-env-host-curr/tracy"]
core-vnext = ["soroban-env-host-curr/next"]
