[workspace]

members = [
    "stellar_contract_sdk",
    "test_add",
    "test_bignum",
    "test_call_helper",
    "test_helper",
    "test_host_objects",
    "test_pay",
    "test_call_everything",
]

[profile.dev]
opt-level = "z"
overflow-checks = false
debug = 0
strip = "debuginfo"
panic = "abort"

[profile.release]
opt-level = "z"
overflow-checks = false
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
